update videos links

--- a/content/posts/aliases-fish.mdx
+++ b/content/posts/aliases-fish.mdx
@@ -25,7 +25,7 @@ No worries, you can still pass any additional argument to your `ls` alias.
 
 ## Make your life easier with aliases
 
-<Video src="https://cleanshot-cloud-fra.accelerator.net/media/23887/TIDudw5Iwj4gm76yb6YccPWnHYoTv3FmpCYiiT04.mp4"/>
+<Video src="https://idkshite.s3.eu-central-1.amazonaws.com/videos/alias-fish.mp4"/>
 
 
 
