--- a/content/posts/compare-visual-changes.mdx
+++ b/content/posts/compare-visual-changes.mdx
@@ -46,6 +46,6 @@ Now the screenshot of the reference page (production environment) should sit on 
 Feel free to play around with the opacity slider to get an impression of how those changes differ.
 Or turn your screenshot into a negative with `OPTION + i` to get a stronger contrast.
 
-<Video src="https://cleanshot-cloud-fra.accelerator.net/media/23887/3R1gRpXqGR7WqsB5av4iCsH42mVjZPIAduwZLnrw.mp4"/>
+<Video src="https://idkshite.s3.eu-central-1.amazonaws.com/videos/compare-visual-changes.mp4"/>
 
 In the long run I would probably invest in some automated regression testing, but as a provisional arrangement it's way more reliable than just glancing over visual changes. 👨‍🎨
