--- a/content/posts/favourite-debugging-method.mdx
+++ b/content/posts/favourite-debugging-method.mdx
@@ -32,7 +32,7 @@ Instead of running through all these logical branches in my head,
 I pick the one that seems most relevant to my problem and start **writing down my thought process** in my favourite note-taking app.
 I prefer notion as it supports nesting collapsible text blocks which allows you to hide your nested lines of thought if they become less relevant.
 
-<Video src="https://cleanshot-cloud-fra.accelerator.net/media/23887/SUOpfagq1hyqBB2PDHb7ApzG7vw7TGQRMDmvZ0MS.mp4"/>
+<Video src="https://idkshite.s3.eu-central-1.amazonaws.com/videos/favourite-debugging-method.mp4"/>
 
 I start with a question and try to answer it by **following my line of thought.**
 Then I move through the code line by line and write down what it does and how it affects what I see on the screen.
