--- a/content/posts/github-code-suggestion.mdx
+++ b/content/posts/github-code-suggestion.mdx
@@ -17,7 +17,7 @@ The author can then decide whether they would like to directly commit, discuss t
 
 ## Creating a code suggestion
 Follow these steps on any GitHub Pull request to propose code changes.
-<Video src="https://cleanshot-cloud-fra.accelerator.net/media/23887/AhAxoDsahXpFt7DbkHi540LBPWsyxkrtwL0X4TSn.mp4"/>
+<Video src="https://idkshite.s3.eu-central-1.amazonaws.com/videos/github-code-suggestion.mp4"/>
 
 The PR author can now simply accept the suggestion.
 
