--- a/content/posts/godot-vectors-print.mdx
+++ b/content/posts/godot-vectors-print.mdx
@@ -20,7 +20,7 @@ It's a simple example of how you can draw a line in Godot to visualize Vectors.
 The end-result will display a graph with a vector that is pointing towards a poodle.
 Next to the poodle we will display it's current position in vector space.
 
-<Video src="https://cleanshot-cloud-fra.accelerator.net/media/23887/sZLUHkOLG1N8vCRvFkQAR0FWciB55wORvxBqCjsA.mp4"/>
+<Video src="https://idkshite.s3.eu-central-1.amazonaws.com/videos/godot-vectors-print.mp4"/>
 
 The demo consists of 2 scripts.
 * `VectorsInSpace.cs` which is attached to the root node of the scene and draws the graph and vector lines.
