--- a/content/posts/observe-object-property.mdx
+++ b/content/posts/observe-object-property.mdx
@@ -72,4 +72,4 @@ In the `set` function we're only recreating the expected behaviour behind settin
 
 And this is how we reveal. The hacker is increasing the level `+1` every `50ms` on `line 14` inside `"/hack.js"`. 🥸
 
-<Video src="https://cleanshot-cloud-fra.accelerator.net/media/23887/Gc1SD2QdOT2IWhXzXGpwjLrOiQaX6SAKvslElCpX.mp4"/>
+<Video src="https://idkshite.s3.eu-central-1.amazonaws.com/videos/observe-object-property.mp4"/>
