--- a/content/posts/container-queries-css.mdx
+++ b/content/posts/container-queries-css.mdx
@@ -12,7 +12,7 @@ tags:
 Container queries allow you to write CSS that is responsive to the **size of the container** instead of the size of your screen.
 They make it possible that components control their responsive styles on their own.
 
-If you enjoy a short video introduction. Here is a (<2min) video explanation to container queries from the [State of CSS 2022](https://web.dev/state-of-css-2022/)
+If you enjoy a short video introduction. Here is a ({`<`}2min) video explanation to container queries from the [State of CSS 2022](https://web.dev/state-of-css-2022/)
 <YouTube videoId="Xy9ZXRRgpLk" opts={{playerVars: {start: 195, end: 308}}} />
 
 ## How to use container queries?
